# arduino-mouse-proxy

./: README.md  pyproject.toml  spec.md
arduino/mouse_proxy/: mouse_proxy.ino
examples/: basic_usage.py
python/arduino_mouse/: __init__.py  client.py  curves.py  protocol.py
